refactor: change command structure
