# cli/models/delete_secret_by_id_body.go
@@ -1,0 +1,50 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// DeleteSecretByIDBody delete secret by Id body
+//
+// swagger:model DeleteSecretByIdBody
+type DeleteSecretByIDBody struct {
+
+	// secret id
+	SecretID string `json:"secret_id,omitempty"`
+}
+
+// Validate validates this delete secret by Id body
+func (m *DeleteSecretByIDBody) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this delete secret by Id body based on context it is used
+func (m *DeleteSecretByIDBody) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *DeleteSecretByIDBody) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *DeleteSecretByIDBody) UnmarshalBinary(b []byte) error {
+	var res DeleteSecretByIDBody
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
