# cli/models/find_all_workspaces_response.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// FindAllWorkspacesResponse find all workspaces response
+//
+// swagger:model FindAllWorkspacesResponse
+type FindAllWorkspacesResponse struct {
+
+	// id
+	ID string `json:"id,omitempty"`
+
+	// name
+	Name string `json:"name,omitempty"`
+
+	// owner
+	Owner string `json:"owner,omitempty"`
+}
+
+// Validate validates this find all workspaces response
+func (m *FindAllWorkspacesResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this find all workspaces response based on context it is used
+func (m *FindAllWorkspacesResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *FindAllWorkspacesResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *FindAllWorkspacesResponse) UnmarshalBinary(b []byte) error {
+	var res FindAllWorkspacesResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
